--- a/Código/index.html
+++ b/Código/index.html
@@ -7,7 +7,7 @@
 <script src="../libraries/p5.dom.min.js"></script>
 <script src="../libraries/p5.sound.min.js"></script>
 <script src="../libraries/p5.collide2d.js"></script>
-<script src="game"></script>
+<script src="game.js"></script>
 </head>
 <body>
 </body>
