--- a/Etapas/index_etapas.html
+++ b/Etapas/index_etapas.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Submarine Eco-Mission</title>
+	<title>Etapas</title>
 	<meta charset="utf-8">
 <script src="../libraries/p5.min.js"></script>
 <script src="../libraries/p5.dom.min.js"></script>
 <script src="../libraries/p5.sound.min.js"></script>
 <script src="../libraries/p5.collide2d.js"></script>
-<script src="game.js"></script>
+<script src="Etapas.js"></script>
 </head>
 <body>
 </body>
