--- a/Código/teste.html
+++ b/Código/teste.html
@@ -10,7 +10,7 @@
     <script src="../libraries/p5.sound.min.js"></script>
     <script src="../libraries/p5.collide2d.js"></script>
     <script src="sketch.js"></script>
-    <script src="auxiliar.js"></script>
+    <script src="classes.js"></script>
   </head>
   <body>
   </body>
