--- a/Código/index.html
+++ b/Código/index.html
@@ -8,8 +8,8 @@
 <script src="../libraries/p5.sound.min.js"></script>
 <script src="../libraries/p5.collide2d.js"></script>
 <script src="game.js"></script>
+<script src="classes.js"></script>
 </head>
 <body>
 </body>
 </html>
-
