--- a/Readme.html
+++ b/Readme.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>LucasMaia435 // Projeto LOP</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>LOP</h1>
@@ -12,7 +13,8 @@
       <li> 5º e 6º Etapas (No Projeto)</li>
       <li> 7º e 8º Etapas (No Projeto)</li>
       <li> 9º e 10º Etapas (Em andamento)</li>
+      <li><a href="https://lucasmaia435.github.io/LOP/C%C3%B3digo/">Clique aqui para abrir o jogo</a></li>
     </u1>
-    <a href="https://lucasmaia435.github.io/LOP/C%C3%B3digo/">Clique aqui para abrir o jogo</a>
+
   </body>
 </html>
